--- a/sample.html
+++ b/sample.html
@@ -1,13 +1,11 @@
-<!-- /personal-website/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
+    <title>Tej Bhatia - Resume</title>
     <style>
-        /* Simple, inline CSS for styling */
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -76,42 +74,53 @@
 
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Software Engineer | Resume</p>
+        <h1>Tej Bhatia</h1>
+        <p>37 Forest Lane, Boxford MA, 01921 | 978-397-5994 | tejbhatia13@yahoo.com</p>
     </header>
     <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                Brief introduction about yourself. Mention your experience, expertise, and interests.
-            </p>
+        <section id="education">
+            <h2>EDUCATION</h2>
+            <p><strong>University of Miami</strong> - Coral Gables, Florida</p>
+            <p>Bachelor of Business Administration, Major in Finance, Minor in Accounting (Expected May 2027)</p>
+            <ul>
+                <li>Relevant Coursework: Business Analytics; Principles of Financial Accounting, Fundamentals of Finance</li>
+            </ul>
         </section>
         <section id="experience">
-            <h2>Experience</h2>
+            <h2>WORK & LEADERSHIP EXPERIENCE</h2>
             <ul>
-                <li>
-                    <strong>Job Title</strong> at <em>Company Name</em> (Start Year - End Year)
-                    <p>Brief description of your responsibilities and achievements.</p>
+                <li><strong>Intern</strong> at <em>Knowledge Management</em>, Tyngsborough, MA (May 2024 – August 2024)
+                    <p>Assisted upper management in their transition away from Oracle. Researched different possibilities according to their needs, presented the information, and aided in the decision-making process utilizing the information given.</p>
+                    <p>Learned about key concepts and immersed myself within the fundamentals of accounting, including financial statements, DCAA compliance, auditing, etc.</p>
                 </li>
-                <li>
-                    <strong>Job Title</strong> at <em>Company Name</em> (Start Year - End Year)
-                    <p>Brief description of your responsibilities and achievements.</p>
+                <li><strong>Food Runner / Host</strong> at <em>Fox Creek Tavern</em>, Ipswich, MA (January 2023 – August 2023)
+                    <p>Delivered food to tables and seated guests, managed waitlist and mobile orders, ensured timely service, maintained cleanliness and table turnover within 90-minute dining time.</p>
+                </li>
+                <li><strong>Intern</strong> at <em>SG Computers</em>, Framingham, MA (May 2022 – August 2022)
+                    <p>Utilized Excel to learn about financial and data analysis, used these skills to aid in creating financial models, as well as analyzing and generating reports on company finances and spending.</p>
+                    <p>Learned the basic skills of IT services, did basic jobs as necessary, and specialized in data entry and organization.</p>
+                </li>
+                <li><strong>Sales Associate</strong> at <em>American Eagle</em>, Danvers, MA (April 2021 – September 2022)
+                    <p>Assisted customers with product selection to ensure a positive shopping experience and maximize sales, maintained a clean and organized sales floor by quickly replenishing sold-out items.</p>
+                    <p>Managed customer flow during peak holiday seasons to reduce wait times and maintain store capacity, Operated the cash register efficiently and analyzed and adapted to changes in customer demand during different seasons.</p>
+                </li>
+                <li><strong>Participant / 4x Award Winner</strong> at <em>Investment Club</em>, Danvers, MA (September 2019 – May 2023)
+                    <p>Utilized money given by school and donors to ensure that said money is invested in the best stocks and bonds to maintain highest returns possible. Pitched ideas to all members, collectively agreed on what to buy and sell, presented to donors the transactions done throughout the year, and more.</p>
+                    <p>Presented in front of donors at the end of each year and presented in front of the club around once per month. Discussed new ideas, the results of our transactions, and convinced others why to make a specific decision, learned strong communication skills.</p>
                 </li>
             </ul>
         </section>
         <section id="skills">
-            <h2>Skills</h2>
+            <h2>SKILLS, ACTIVITIES & INTERESTS</h2>
             <ul>
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
+                <li>Languages: Fluent in English, Conversational Proficiency in Chinese</li>
+                <li>Activities: Let’s Get Ethical Club, Golf Club, Anime Club, Online Sneaker/Sport Card Business</li>
+                <li>Interests: Basketball, golfing, investing, buying and reselling sneakers and cards, social outings</li>
             </ul>
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
-            <p>Phone: (123) 456-7890</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourname" target="_blank">linkedin.com/in/yourname</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/tej-bhatia" target="_blank">linkedin.com/in/tej-bhatia</a></p>
         </section>
     </main>
 </body>
