--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tej Bhatia - Resume</title>
-    <style>
+    <style> 
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -13,7 +13,7 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
-        }
+        } 
 
         header {
             background: #333;
@@ -81,6 +81,7 @@
         <section id="education">
             <h2>EDUCATION</h2>
             <p><strong>University of Miami</strong> - Coral Gables, Florida</p>
+            <img src="assets/picture">
             <p>Bachelor of Business Administration, Major in Finance, Minor in Accounting (Expected May 2027)</p>
             <ul>
                 <li>Relevant Coursework: Business Analytics; Principles of Financial Accounting, Fundamentals of Finance</li>
