--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section id="education">
             <h2>EDUCATION</h2>
             <p><strong>University of Miami</strong> - Coral Gables, Florida</p>
-            <img alt="https4yd.  " >
+            <img src="assets/photo.png" >
             <p>Bachelor of Business Administration, Major in Finance, Minor in Accounting (Expected May 2027)</p>
             <ul>
                 <li>Relevant Coursework: Business Analytics; Principles of Financial Accounting, Fundamentals of Finance</li>
